<resources>
    <string name="app_name">LAB04</string>
    <string name="Name">Name</string>
    <string name="Enter_Email">Enter Email</string>
    <string name="Password">Enter Password</string>
    <string name="Re_Enter_Password">Re Enter Password</string>
    <string name="Email">Enter Email</string>
    <string name="Submit">SUBMIT</string>
    <string name="Nmae">Name</string>
    <string name="btnCancel">CANCEL</string>
</resources>